Made SQL storage

--- a/eda-fishinggear.ipynb
+++ b/eda-fishinggear.ipynb
@@ -32,14 +32,18 @@
     "\n",
     "import eda\n",
     "\n",
-    "RANDOM = 42"
+    "import psycopg2 as pg\n",
+    "import sql_fish\n",
+    "\n",
+    "RANDOM = 42\n",
+    "connection = sql_fish.fishing_database()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "load all ship types except unknown"
+    "load a sample of all ship types except unknown (20k rows)"
    ]
   },
   {
@@ -48,15 +52,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fishing_path = \"./data/fishing boats/\"\n",
+    "query = \"\"\"\n",
+    "    SELECT * FROM (\n",
+    "        SELECT DISTINCT 1 + trunc(random() * 5100000)::integer AS id\n",
+    "        FROM generate_series(1, 1100) g\n",
+    "        ) r\n",
+    "    JOIN    fishingfeatures USING (id)\n",
+    "    WHERE   fishingfeatures.gear_type != 'unknown'\n",
+    "    LIMIT   20000;\n",
+    "        \"\"\"\n",
     "\n",
-    "gear_types = [\"drifting_longlines\", \"fixed_gear\", \"pole_and_line\", \"purse_seines\", \"trawlers\", \"trollers\"]\n",
+    "fishing_type_sample_df = pd.io.sql.read_sql(query, connection)\n",
     "\n",
-    "fishing_raw_dfs = defaultdict(pd.DataFrame)\n",
-    "\n",
-    "for gear_type in gear_types:\n",
-    "    fishing_raw_dfs[gear_type] = pd.read_csv(fishing_path + gear_type + \".csv\", parse_dates=['timestamp'], date_parser=lambda col: pd.to_datetime(col, unit='s'))\n",
-    "    fishing_raw_dfs[gear_type][\"gear_type\"] = gear_type"
+    "fishing_type_sample_df"
    ]
   }
  ],
